[package]
name = "dontfrag"
version = "1.0.0"
edition = "2021"

description = "Library for setting Don't Fragment option (DF) on UDP sockets"
authors = ["N. Nattis <contact@nicbn.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nicbn/dontfrag-rs"
repository = "https://github.com/nicbn/dontfrag-rs"
keywords = ["api", "udp"]
categories = ["api-bindings", "network-programming", "os"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.35.0", optional = true, features = ["net"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.150"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

[package.metadata.docs.rs]
all-features = true
